--- a/Bootstrap4/conFusion/index.html
+++ b/Bootstrap4/conFusion/index.html
@@ -4,6 +4,7 @@
 <head>
         <!-- Required meta tags always come first -->
         <meta charset="utf-8">
+
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
     
@@ -14,9 +15,9 @@
 
 <body>
 
-    <header>
-        <div>
-            <div>
+    <header class="jumbotron">
+        <div class="container">
+            <div class="row">
                 <div>
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
@@ -27,8 +28,8 @@
         </div>
     </header>
 
-    <div>
-        <div>
+    <div class="container">
+        <div class="row">
             <div>
                 <h3>Our Lipsmacking Culinary Creations</h3>
             </div>
@@ -39,7 +40,7 @@
         </div>
 
 
-        <div>
+        <div class="row">
             <div>
                 <h3>This Month's Promotions</h3>
             </div>
@@ -49,7 +50,7 @@
             </div>
         </div>
 
-        <div>
+        <div class="row">
             <div>
                 <h3>Meet our Culinary Specialists</h3>
             </div>
@@ -62,8 +63,8 @@
     </div>
 
     <footer>
-        <div>
-            <div>             
+        <div class="container">
+            <div class="row">             
                 <div>
                     <h5>Links</h5>
                     <ul>
@@ -95,13 +96,13 @@
                     </div>
                 </div>
            </div>
-           <div>             
+           <div class="row">             
                 <div>
                     <p>© Copyright 2018 Ristorante Con Fusion</p>
                 </div>
            </div>
         </div>
-    </footer>
+    </footer >
         <!-- jQuery first, then Popper.js, then Bootstrap JS. -->
         <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
         <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
