--- a/week2/aboutus.html
+++ b/week2/aboutus.html
@@ -10,6 +10,10 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
+    <!-- Importamos font awesome   -->
+    <Link rel= "stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
+    <Link href="css/styles.css"  rel="stylesheet">
+        
     <title>Ristorante Con Fusion: About Us</title>
 </head>
 
