--- a/week2/index.html
+++ b/week2/index.html
@@ -11,6 +11,10 @@
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="css/styles.css">
+        <!-- Importamos font awesome   -->
+        <Link rel= "stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
+        <Link href="css/styles.css"  rel="stylesheet">
+
     <title>Ristorante Con Fusion</title>
 </head>
 
@@ -24,10 +28,26 @@
            <a class="navbar-brand" href="#">Ristorante Con Fusion</a>
            <div class="collapse navbar-collapse" id=Navbar>
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active"><a class="nav-link" href="#">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./aboutus.html">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Menu</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">
+                            <span class="fa fa-home fa-lg"></span> Home
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./aboutus.html">
+                            <span class="fa fa-info fa-lg"></span> About
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">
+                            <span class="fa fa-list fa-lg"></span> Menu
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">
+                            <span class="fa fa-address-card fa-lg"></span> Contact
+                        </a>
+                    </li>
                 </ul>
            </div>
         </div>
