--- a/week2/index.html
+++ b/week2/index.html
@@ -78,11 +78,12 @@
                     src="img/uthappizza.png " alt="uthapizza">
                     <div class="media-body">
                         <!-- this class means margin top zero. -->
-                        <h2 class="mt-0">Uthappizza</h2>
+                        <h2 class="mt-0">Uthappizza <span class="badge badge-danger">HOT</span>
+                            <span class="badge badge-pill badge-secondary">4.99</span>
+                        </h2>
                         <p>A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
                     </div>
                 </div>
-
             </div>
         </div>
 
