--- a/week2/index.html
+++ b/week2/index.html
@@ -114,6 +114,11 @@
             </div>
         </div>
     </div>
+    <div class="row row-content align-items-center">
+        <div class="col-12">
+
+        </div>
+    </div>
 
     <footer class="footer">
         <div class="container">
