--- a/week2/index.html
+++ b/week2/index.html
@@ -114,9 +114,60 @@
             </div>
         </div>
     </div>
-    <div class="row row-content align-items-center">
-        <div class="col-12">
-
+    <div class="row row-content justify-content-center">
+        <div class="col col-sm-6 align-self-center">
+            <div class="card">
+                <h3 class="card-header bg-warning text-white" > Reserve a Table </h3>
+                <div class="card-body">
+                    <form>
+                        <div class="form-group row">
+                            <label class="col-12 col-sm-2">Number of Guests</label>
+                            <div class="col">
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" id="firstoption" value="option1">
+                                    <label class="form-check-label" for="firstoption">1</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" id="secondoption" value="option2">
+                                    <label class="form-check-label" for="secondoption">2</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" id="thirdoption" value="option3">
+                                    <label class="form-check-label" for="thirdoption">3</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" id="fourthoption" value="option4">
+                                    <label class="form-check-label" for="fourthoption">4</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" id="fifthoption" value="option5">
+                                    <label class="form-check-label" for="fifthoption">5</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" id="sixthoption" value="option6">
+                                    <label class="form-check-label" for="sixthoption">6</label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-12 col-sm-2">Date and Time</label>
+                            <div class="col-12 col-sm-4">
+                                <input type="text" class="form-control" id="date" name="date"
+                                placeholder="Date">
+                            </div>
+                            <div class="col-12 col-sm-4">
+                                <input type="text" class="form-control" id="time" name="time"
+                                placeholder="Time">
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <div class="col offset-sm-2 col-md-10">
+                              <button type="submit" class="btn btn-primary">Reserve</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
         </div>
     </div>
 
