--- a/week2/index.html
+++ b/week2/index.html
@@ -64,7 +64,7 @@
                     <img src="img/logo.png" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm-3 align-self-center">
-                    <a class="btn btn-warning btn-block btn-sm" href="#reservation" role="button">Reserve Table</a>
+                    <a class="btn btn-warning btn-sm" href="#reservation" role="button"><strong>Reserve Table</strong></a>
                 </div>
             </div>
         </div>
@@ -132,7 +132,7 @@
                 <div class="card-body">
                     <form>
                         <div class="form-group row">
-                            <label class="col-12 col-sm-2">Number of Guests</label>
+                            <label class="col-12 col-sm-2"><strong>Number of Guests </strong></label>
                             <div class="col">
                                 <div class="form-check form-check-inline">
                                     <input class="form-check-input" type="radio" id="firstoption" value="option1">
@@ -161,7 +161,7 @@
                             </div>
                         </div>
                         <div class="form-group row">
-                            <label class="col-12 col-sm-2">Date and Time</label>
+                            <label class="col-12 col-sm-2"><strong>Date and Time</strong></label>
                             <div class="col-12 col-sm-4">
                                 <input type="text" class="form-control" id="date" name="date"
                                 placeholder="Date">
