--- a/week3/index.html
+++ b/week3/index.html
@@ -96,6 +96,7 @@
             </div>
         </div>
     </div>
+
     <header class="jumbotron">
         <div class="container">
             <div class="row row-header">
@@ -107,16 +108,89 @@
                     <img src="img/logo.png" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm align-self-center">
-                    <!-- using data html means that the tooltip content can be styled using HTML  -->
                     <a role="button"class="btn btn-block nav-link btn-warning" 
-                    data-toggle="tooltip" data-html="true" 
-                    title="Or call us at <br><strong>+852 1234678</strong>"
-                    data-placement = "bottom"
-                    href="#reservation" role="button"><strong>Reserve Table</strong></a>
+                    data-toggle="modal" data-target="#reserveModal">Reserve Table</a>
                 </div>
             </div>
         </div>
     </header>
+
+    <!-- First task, form has been moved into a modal  -->
+    <div id="reserveModal" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg" role="content">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Reserve a Table</h4>
+                    <button type="button" class="close" data-dismiss="modal">
+                        &times;
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group row">
+                            <label class="col-12 col-sm-2"><strong>Number of Guests </strong></label>
+                            <div class="col-md-10">
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" id="firstoption" value="option1">
+                                    <label class="form-check-label" for="firstoption">1</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" id="secondoption" value="option2">
+                                    <label class="form-check-label" for="secondoption">2</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" id="thirdoption" value="option3">
+                                    <label class="form-check-label" for="thirdoption">3</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" id="fourthoption" value="option4">
+                                    <label class="form-check-label" for="fourthoption">4</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" id="fifthoption" value="option5">
+                                    <label class="form-check-label" for="fifthoption">5</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" id="sixthoption" value="option6">
+                                    <label class="form-check-label" for="sixthoption">6</label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-12 col-sm-2"><strong>Section</strong></label>
+                            <div class="col-12 col-sm-4">
+                                <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                                    <label class="btn btn-success active">
+                                        <input type="radio" name="section" id="non_smoking" checked>Non-Smoking
+                                    </label>
+                                    <label class="btn btn-danger">
+                                        <input type="radio" name="section" id="smoking" autocomplete="off">Smoking
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-12 col-sm-2"><strong>Date and Time</strong></label>
+                            <div class="col-12 col-sm-4">
+                                <input type="text" class="form-control" id="date" name="date"
+                                placeholder="Date">
+                            </div>
+                            <div class="col-12 col-sm-4">
+                                <input type="text" class="form-control" id="time" name="time"
+                                placeholder="Time">
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <div class="offset-md-2 col-md-10">
+                                <button type="button" class="btn btn-secondary btn-sm ml-auto" data-dismiss="modal">Cancel</button>
+                                <button type="submit" class="btn btn-primary btn-sm ml-1">Reserve</button>   
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <div class="container">
         <!-- adding a carousel -->
@@ -222,63 +296,6 @@
             </div>
         </div>
     </div>
-    <div class="row row-content justify-content-center" id="reservation">
-        <div class="col col-sm-8 align-self-center">
-            <div class="card">
-                <h3 class="card-header bg-warning text-white" > Reserve a Table </h3>
-                <div class="card-body">
-                    <form>
-                        <div class="form-group row">
-                            <label class="col-12 col-sm-2"><strong>Number of Guests </strong></label>
-                            <div class="col">
-                                <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" id="firstoption" value="option1">
-                                    <label class="form-check-label" for="firstoption">1</label>
-                                </div>
-                                <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" id="secondoption" value="option2">
-                                    <label class="form-check-label" for="secondoption">2</label>
-                                </div>
-                                <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" id="thirdoption" value="option3">
-                                    <label class="form-check-label" for="thirdoption">3</label>
-                                </div>
-                                <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" id="fourthoption" value="option4">
-                                    <label class="form-check-label" for="fourthoption">4</label>
-                                </div>
-                                <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" id="fifthoption" value="option5">
-                                    <label class="form-check-label" for="fifthoption">5</label>
-                                </div>
-                                <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" id="sixthoption" value="option6">
-                                    <label class="form-check-label" for="sixthoption">6</label>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="form-group row">
-                            <label class="col-12 col-sm-2"><strong>Date and Time</strong></label>
-                            <div class="col-12 col-sm-4">
-                                <input type="text" class="form-control" id="date" name="date"
-                                placeholder="Date">
-                            </div>
-                            <div class="col-12 col-sm-4">
-                                <input type="text" class="form-control" id="time" name="time"
-                                placeholder="Time">
-                            </div>
-                        </div>
-                        <div class="form-group row">
-                            <div class="col offset-sm-2 col-md-10">
-                              <button type="submit" class="btn btn-primary">Reserve</button>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
-
     <footer class="footer">
         <div class="container">
             <div class="row">             
@@ -323,12 +340,6 @@
         <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
         <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
         <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-        <!-- we came here to active the tooltip with Javascript  -->
-        <script>
-            $(document).ready(function(){
-                $('[data-toggle="tooltip"]').tooltip();
-            })
-        </script>
 
 </body>
 
