--- a/week4/index.html
+++ b/week4/index.html
@@ -239,14 +239,9 @@
                     <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
                         <span class="carousel-control-next-icon"></span>
                     </a>
-                    <div class="btn-group" id="carouselButton">
-                        <button class="btn btn-danger btn-sm" id="carousel-pause">
-                            <span class="fa fa-pause"></span>
-                        </button>
-                        <button class="btn btn-danger btn-sm" id="carousel-play">
-                            <span class="fa fa-play"></span>
-                        </button>
-                    </div>
+                    <button class="btn btn-danger btn-sm" id="carouselButton">
+                        <span class="fa fa-pause"></span>
+                    </button>
                 </div>
             </div>
         </div>
@@ -351,13 +346,18 @@
         <script>
             $(document).ready(function(){
                 $('#mycarousel').carousel({interval:2000});
-                // so this is for the carousel button, if a click action is done 
-                // by the user, then execute this particular function that we especify inside this code
-                $('#carousel-pause').click(function(){
-                  $('#mycarousel').carousel('pause');  
-                });
-                $('#carousel-play').click(function(){
-                  $('#mycarousel').carousel('cycle');  
+                // we have a function to change the pause button to play and pause to play.
+                $('#carouselButton').click(function(){
+                    if($('#carouselButton').children('span').hasClass('fa-pause')){
+                        $('#mycarousel').carousel('pause'); 
+                        $('#carouselButton').children('span').removeClass('fa-pause');
+                        $('#carouselButton').children('span').addClass('fa-play'); 
+                    }
+                    else if ($('#carouselButton').children('span').hasClass('fa-play')){
+                        $('#mycarousel').carousel('cycle'); 
+                        $('#carouselButton').children('span').removeClass('fa-play');
+                        $('#carouselButton').children('span').addClass('fa-pause'); 
+                    }
                 });
             });    
         </script>
