--- a/week4/index.html
+++ b/week4/index.html
@@ -51,7 +51,7 @@
                     </li>
                 </ul>
                 <span class="navbar-text">
-                    <a data-toggle="modal" data-target="#loginModal">
+                    <a id="loginButton">
                         <span class="fa fa-sign-in"></span>
                         Login
                     </a>
@@ -109,7 +109,7 @@
                 </div>
                 <div class="col-12 col-sm align-self-center">
                     <a role="button"class="btn btn-block nav-link btn-warning" 
-                    data-toggle="modal" data-target="#reserveModal">Reserve Table</a>
+                    id="reserveButton">Reserve Table</a>
                 </div>
             </div>
         </div>
@@ -359,7 +359,15 @@
                         $('#carouselButton').children('span').addClass('fa-pause'); 
                     }
                 });
+                $('#loginButton').click(function(){
+                $('#loginModal').modal('toggle');
+                });
+                $('#reserveButton').click(function(){
+                    $('#reserveModal').modal('toggle');
+                });
             });    
+
+
         </script>
 </body>
 
